@@ -8,6 +8,12 @@
 #
 # $Id$
 
+2005-01-13
+  - pixel, added simple ctype for IOP
+
+2005-01-12
+  - pixel, created alloc.irx
+
 2005-01-11
   - pixel, renamed RFU060 and RFU061 to SetupThread and SetupHeap.
   - pixel, introduced locking in the sdk, to fix issues with malloc.
